<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8070BB">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="#8070BB"
        android:layout_gravity="center" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="50dp"
            android:background="#8070BB">

            <ImageView
                android:layout_width="272dp"
                android:layout_height="83dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo"
                android:layout_marginBottom="15dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/slogan"
                android:textStyle="normal|bold"
                android:textColor="#D2D3D4"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/usuario"
                android:textStyle="normal|bold"
                android:textColor="#D2D3D4"
                android:fontFamily="sans-serif-smallcaps" />
            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="20dp"
                android:inputType="text"
                android:textColor="#000000"
                android:textStyle="normal|bold"
                android:background="#D2D3D4"
                android:fontFamily="sans-serif"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:hint="Digite o nome de usuário"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/senha"
                android:textStyle="normal|bold"
                android:textColor="#D2D3D4"
                android:fontFamily="sans-serif-smallcaps" />
            <EditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textStyle="normal|bold"
                android:background="#D2D3D4"
                android:fontFamily="sans-serif"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:hint="Digite a senha"/>

            <Button
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:onClick="entrarOnClick"
                android:text="@string/entrar"
                android:textStyle="normal|bold"
                android:textColor="#8070BB"
                android:background="#D2D3D4"
                android:textAlignment="center"
                android:id="@+id/buttonEntrar"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#8070BB">

        <CheckBox
            android:id="@+id/somHabilitado"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/som_habilitado"/>
        </LinearLayout>
        </LinearLayout>
</ScrollView>