<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8070BB"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="#8070BB"
        android:layout_gravity="center" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:layout_margin="30dp"
            android:background="#8070BB">

            <TextView
                android:id="@+id/regiao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="normal|bold"
                android:textColor="#d2d3d4"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:textSize="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:text="@string/ola"
                    android:textStyle="normal|bold"
                    android:textColor="#D2D3D4"
                    android:fontFamily="sans-serif-smallcaps" />

                <TextView
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20dp"
                    android:textStyle="normal|bold"
                    android:textColor="#D2D3D4"
                    android:fontFamily="sans-serif-smallcaps" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >


                    <ImageButton
                        android:id="@+id/buttonAlterarRegiao"
                        android:textSize="15dp"
                        android:onClick="alterarRegiaoOnClick"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:background="@drawable/ic_pesquisaregiao"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_height="115dp"
                        android:layout_width="90dp" />

                    <ImageButton
                        android:id="@+id/buttonPesquisar"
                        android:textSize="15dp"
                        android:onClick="pesquisarOnClick"
                        android:text="@string/pesquisar"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:background="@drawable/ic_pesquisalocal"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_height="115dp"
                        android:layout_width="90dp"/>

                   <!-- <Button
                        android:id="@+id/buttonMeusLocais"
                        android:textSize="15dp"
                        android:onClick="locaisOnClick"
                        android:text="@string/meusLocais"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:background="#d2d3d4"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:layout_height="75dp"
                        android:layout_width="100dp" />

                    <Button
                        android:id="@+id/buttonPesquisar"
                        android:textSize="15dp"
                        android:onClick="pesquisarOnClick"
                        android:text="@string/pesquisar"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:background="#d2d3d4"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:layout_height="75dp"
                        android:layout_width="100dp" />-->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/buttonMeusLocais"
                        android:textSize="15dp"
                        android:onClick="locaisOnClick"
                        android:text="@string/meusLocais"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:background="@drawable/ic_meulocal"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_height="115dp"
                        android:layout_width="90dp"/>



                    <ImageButton
                        android:id="@+id/buttonLogout"
                        android:textSize="15dp"
                        android:onClick="logoutOnClick"
                        android:text="@string/logout"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:background="@drawable/ic_sair"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:layout_height="115dp"
                        android:layout_width="90dp"/>


             <!--       <Button
                        android:id="@+id/buttonAlterarRegiao"
                        android:textSize="15dp"
                        android:onClick="alterarRegiaoOnClick"
                        android:text="@string/alterarRegiao"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:layout_height="75dp"
                        android:layout_width="100dp"
                        android:background="#d2d3d4"/>

                    <Button
                        android:id="@+id/buttonLogout"
                        android:textSize="15dp"
                        android:onClick="logoutOnClick"
                        android:text="@string/logout"
                        android:textStyle="normal|bold"
                        android:textColor="#8070BB"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:layout_height="75dp"
                        android:layout_width="100dp"
                        android:background="#d2d3d4" />-->
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonVoltar"
                android:textSize="15dp"
                android:background="@drawable/ic_logo"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_height="85dp"
                android:layout_width="170dp"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>